--- a/package.json
+++ b/package.json
@@ -15,36 +15,43 @@
     "seed": "ts-node src/seed-data.ts",
     "test:service": "ts-node src/test-service.ts"
   },
-  "keywords": ["toeic", "exam", "nodejs", "typescript"],
+  "keywords": [
+    "toeic",
+    "exam",
+    "nodejs",
+    "typescript"
+  ],
   "author": "Your Team",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "typeorm": "^0.3.17",
+    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "winston": "^3.11.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "cloudinary": "^1.41.0",
-    "multer": "^1.4.5-lts.1",
-    "express-rate-limit": "^7.1.5"
+    "typeorm": "^0.3.17",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.9.0",
     "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.10",
+    "@types/node": "^20.9.0",
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/multer": "^1.4.10",
-    "typescript": "^5.2.2",
+    "axios": "^1.13.2",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.2.2"
   }
 }
